# llama.cpp

./: .gitignore  1.diff  CMakeLists.txt  Makefile  a.patch  convert_hf_to_gguf.py  ggml-cuda.cu  ggml.c  llama.cpp  llama.h
common/: common.cpp
examples/server/: README.md  server.cpp
examples/server/tests/features/steps/: steps.py
ggml-cuda/: common.cuh  dmmv.cu  mmq.cu  mmvq.cu  vecdotq.cuh
ggml/include/: ggml.h
ggml/src/: ggml.c
ggml/src/ggml-blas/: CMakeLists.txt  ggml-blas.cpp  tiny-blas.cpp  tiny-blas.h
ggml/src/ggml-cpu/: binary-ops.cpp  binary-ops.h  ggml-cpu.c  ops.cpp
ggml/src/ggml-cpu/llamafile/: sgemm.cpp  sgemm.h
ggml/src/ggml-cuda/: CMakeLists.txt  binbcast.cu  binbcast.cuh  convert.cu  cutlass-gemm.cuh  fattn-common.cuh  ggml-cuda.cu  mmvq.cu  norm.cu  vecdotq.cuh
src/: llama-graph.cpp  llama-model-loader.cpp  llama-model.cpp
tests/: test-backend-ops.cpp  test-tokenizer-0-deepseek-coder.cpp
